--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resume</title>
+    <title>Dishant Writes</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Dishant Parikh</h4>
-                    <h1>Conversations with you;<br /> Without you.</h1>
+                    <h1>Conversations with you; <br>Without you.</h1>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="col-md-6 about-img-div">
                 <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/about-img.jpg" width="400" class="img-responsive" alt="" align="right"
+                <img src="img/home3.jpg" width="400" class="img-responsive" alt="" align="right"
                     data-aos="fade-right" data-aos-delay="0" />
             </div>
         </div>
@@ -159,9 +159,9 @@
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6  fashion logo">
-                                <a id="demo01" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 photography">
+                                <a href="poems/entry1.html" class="portfolio_item"> <img
+                                        src="img/portfolio/Love3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion /
@@ -175,7 +175,7 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 ads graphics">
                                 <a id="demo02" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
+                                        src="img/portfolio/Love4.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Floating mockups</span> <em>Ads /
@@ -189,7 +189,7 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 photography">
                                 <a id="demo03" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
+                                        src="img/portfolio/Love2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Photorealistic smartwatch</span>
@@ -203,7 +203,7 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 fashion ads">
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
+                                        src="img/portfolio/Love5.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Held by hands</span> <em>Fashion / Ads</em>
@@ -231,7 +231,7 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 photography">
                                 <a id="demo06" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
+                                        src="img/portfolio/Love1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Photorealistic smartwatch</span>
