--- a/index.html
+++ b/index.html
@@ -65,14 +65,18 @@
         <div class="container">
             <div class="col-md-6" data-aos="fade-up">
                 <h4>01</h4>
-                <h1 class="size-50">Know <br /> About me</h1>
+                <h1 class="size-50">Know <br /> About the conversations</h1>
                 <div class="h-50"></div>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                    Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium
-                    strategic theme areas vis-a-vis.</p>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                    Enthusiastically create seamless synergy rather than excellent value.</p>
-                <div class="h-50"></div> <img src="img/Signature.png" width="700" alt="" />
+                <p>Welcome to the conversations. This is not just a poem diary but also a window into my life or out of yours.
+                    Conversations provide the escape from reality and talk about the things I wished to, with you. The conversations
+                    are not just for me, but maybe even for you. When you feel out of breath or need to just close your eyes and smile, 
+                    I would know. And I would be grateful to have had a chance to drive you down the memory (or the imaginary) lane. 
+                </p>
+                <p>Each poem has its own diction rule. It is something that I have appended in order to make it easier for you to feel the feeling 
+                    that I wanted to lock in those words. Each poem would have, at its end the magic reciepe, the interpretation of mine. You may wanna skip it 
+                    if you want to keep that poetry as yours, its anyway up for grabs. Much love, 
+                </p>
+                <div class="h-50"></div> <img src="img/Signature.png" alt="Signature" />
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -146,11 +150,11 @@
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".photography">L'amour</a></li>
-                                    <li><a href="" data-filter=".logo">Faire mal</a></li>
-                                    <li><a href="" data-filter=".graphics">Life</a></li>
-                                    <li><a href="" data-filter=".ads">Cathersis</a></li>
-                                    <li><a href="" data-filter=".fashion">Questions</a></li>
+                                    <li><a href="" data-filter=".love">L'amour</a></li>
+                                    <li><a href="" data-filter=".hurt">Faire mal</a></li>
+                                    <li><a href="" data-filter=".life">Life</a></li>
+                                    <li><a href="" data-filter=".catharsis">catharsis</a></li>
+                                    <li><a href="" data-filter=".questions">Questions</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -159,13 +163,12 @@
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 photography">
-                                <a href="poems/entry1.html" class="portfolio_item"> <img
+                            <div class="col-md-4 col-sm-6 love">
+                                <a href="poems/love1.html" target="_blank" class="portfolio_item"> <img
                                         src="img/portfolio/Love3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion /
-                                                    Logo</em> </div>
+                                            <div class="item_info"> <span>One more time</span> <em>L'amour</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -173,13 +176,26 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 ads graphics">
-                                <a id="demo02" href="#animatedModal" class="portfolio_item"> <img
+                            <div class="col-md-4 col-sm-6 hurt">
+                                <a href="poems/hurt1.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Hurt1.jpg" alt="image" class="img-responsive" />
+                                    <div class="portfolio_item_hover">
+                                        <div class="portfolio-border clearfix">
+                                            <div class="item_info"> <span>Broken pieces</span> <em>Faire mal</em> </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6 love">
+                                <a href="poems/love2.html" target="_blank" class="portfolio_item"> <img
                                         src="img/portfolio/Love4.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Floating mockups</span> <em>Ads /
-                                                    Graphics</em> </div>
+                                            <div class="item_info"> <span>How silly?</span>
+                                                <em>L'amour</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -187,26 +203,12 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 photography">
-                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/Love2.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 questions">
+                                <a href="poems/questions1.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Questions1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Photorealistic smartwatch</span>
-                                                <em>Photography</em> </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- end single work -->
-
-                            <!-- single work -->
-                            <div class="col-md-4 col-sm-6 fashion ads">
-                                <a id="demo04" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/Love5.jpg" alt="image" class="img-responsive" />
-                                    <div class="portfolio_item_hover">
-                                        <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Held by hands</span> <em>Fashion / Ads</em>
+                                            <div class="item_info"> <span>Quelques ‘bête’ questions</span> <em>Questions</em>
                                             </div>
                                         </div>
                                     </div>
@@ -215,12 +217,12 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
-                                <a id="demo05" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 hurt">
+                                <a href="poems/hurt2.html" traget="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Hurt2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em>
+                                            <div class="item_info"> <span>Better off without you</span> <em>Faire mal</em>
                                             </div>
                                         </div>
                                     </div>
@@ -229,13 +231,13 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 photography">
-                                <a id="demo06" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/Love1.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 hurt">
+                                <a href="poems/hurt3.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Hurt3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Photorealistic smartwatch</span>
-                                                <em>Photography</em> </div>
+                                            <div class="item_info"> <span>The wallflower that used to be yours</span>
+                                                <em>Faire mal</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -243,12 +245,12 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
-                                <a id="demo07" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 catharsis">
+                                <a href="poems/catharsis1.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Catharsis1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em>
+                                            <div class="item_info"> <span>Little less sad</span> <em>Catharsis</em>
                                             </div>
                                         </div>
                                     </div>
@@ -257,12 +259,12 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
-                                <a id="demo08" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 life">
+                                <a href="poems/life2.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Life2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em>
+                                            <div class="item_info"> <span>Warmth, nostalgia and a torn piece of paper</span> <em>Life</em>
                                             </div>
                                         </div>
                                     </div>
@@ -271,12 +273,12 @@
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
-                                <a id="demo09" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
+                            <div class="col-md-4 col-sm-6 life">
+                                <a href="poems/life1.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Life1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em>
+                                            <div class="item_info"> <span>Home</span> <em>Life</em>
                                             </div>
                                         </div>
                                     </div>
