--- a/poems/hurt2.html
+++ b/poems/hurt2.html
@@ -48,61 +48,66 @@
     <!-- ./header -->
 
     <!-- about -->
-    <div class="section" id="about">
+    <div class="section padd-bottom-0" id="about">
         <div class="container">
-            <div class="col-md-6" data-aos="fade-up">
-                <h4>01</h4>
-                <h1 class="size-50">Better off without you <br /> </h1>
-                <div class="h-50"></div>
-                <article style="display: table;">
-                    <p style="white-space: pre-line;"> I don’t know if you were selfish then or now
-                        I don’t know if I am being selfish then or now
-                        I just know that it hurt
-                        You went away and it hurt
+            <div class="flexbox">
+                <div class="col-md-6 about-para" data-aos="fade-up">
+                    <h4>01</h4>
+                    <h1 class="size-50">Better off without you <br /> </h1>
+                    <div class="h-50"></div>
+                    <article style="display: table;">
+                        <p style="white-space: pre-line;"> I don’t know if you were selfish then or now
+                            I don’t know if I am being selfish then or now
+                            I just know that it hurt
+                            You went away and it hurt
 
-                        You gave me the cup of ice cream that we shared
-                        The night when you first kissed me 
-                        I would look at that cup every night and realize that not just the cup but even the apartment next door is now empty and so is my upper right arm when I lay on our bed; well my bed
-                        It reminded me that the cup is here but you weren’t
+                            You gave me the cup of ice cream that we shared
+                            The night when you first kissed me
+                            I would look at that cup every night and realize that not just the cup but even the
+                            apartment next door is now empty and so is my upper right arm when I lay on our bed; well my
+                            bed
+                            It reminded me that the cup is here but you weren’t
 
-                        And now you looked at the cup and smiled
-                        Put your arms around me and look in my eyes
-                        But dear, your skin was torching my neck 
-                        You came back 
-                        But I push you back 
+                            And now you looked at the cup and smiled
+                            Put your arms around me and look in my eyes
+                            But dear, your skin was torching my neck
+                            You came back
+                            But I push you back
 
-                        You landed on the table’s deep end and you got hurt 
-                        And your eyes didn’t hide that fact at all 
-                        I am sorry but I know that if you came back then you will leave again 
-                        And I can’t take all the hurt every time 
-                        I didn’t push you because I didn’t love you 
-                        It's because I knew it won’t last and maybe this time neither will I 
-                        Hurt is a tricky thing. 
+                            You landed on the table’s deep end and you got hurt
+                            And your eyes didn’t hide that fact at all
+                            I am sorry but I know that if you came back then you will leave again
+                            And I can’t take all the hurt every time
+                            I didn’t push you because I didn’t love you
+                            It's because I knew it won’t last and maybe this time neither will I
+                            Hurt is a tricky thing.
 
-                        You kept standing there as I left storming out because I didn’t want to cry in front of you
-                        I didn’t want to see you cry either
-                        I didn’t want you to put your hands around my face and say that I am not leaving 
-                        Because I know your eyes can’t hide that fact either
-                        I don’t know how much I can take it 
-                        I want to spend every possible living moment with you but I keep denying every opportunity 
-                        Because you know why 
+                            You kept standing there as I left storming out because I didn’t want to cry in front of you
+                            I didn’t want to see you cry either
+                            I didn’t want you to put your hands around my face and say that I am not leaving
+                            Because I know your eyes can’t hide that fact either
+                            I don’t know how much I can take it
+                            I want to spend every possible living moment with you but I keep denying every opportunity
+                            Because you know why
 
-                        You know I can’t help but fall in love with you the moment you smile at me 
-                        You know I will tear myself down and burn just to be able to keep you warm 
-                        But I already did that and it's all just dark inside 
-                        Well for a moment I can try and light the ashes left behind but I can’t stand the scent of yours in that smoke
+                            You know I can’t help but fall in love with you the moment you smile at me
+                            You know I will tear myself down and burn just to be able to keep you warm
+                            But I already did that and it's all just dark inside
+                            Well for a moment I can try and light the ashes left behind but I can’t stand the scent of
+                            yours in that smoke
 
-                        I think I will be better off or just off 
-                        Without you                        
-                    </p>
+                            I think I will be better off or just off
+                            Without you
+                        </p>
 
-                    <img src="../img/yours.png" alt="" />
-                </article>
-            </div>
-            <div class="col-md-6 about-img-div">
-                <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="../img/portfolio/Hurt1.jpg" width="400" class="img-responsive" alt="" align="right"
-                    data-aos="fade-right" data-aos-delay="0" />
+                        <img src="../img/yours.png" width="30%" alt="" style="float: right;" />
+                    </article>
+                </div>
+                <div class="col-md-6 about-img-div">
+                    <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
+                    <img src="../img/portfolio/Hurt1.jpg" width="400" class="img-responsive" alt="" align="right"
+                        data-aos="fade-right" data-aos-delay="0" />
+                </div>
             </div>
         </div>
     </div>
@@ -138,7 +143,7 @@
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 love">
-                                <a href="poems/love1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="love1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Love3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -151,7 +156,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="hurt1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Hurt1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -164,7 +169,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 love">
-                                <a href="poems/love2.html" target="_blank" class="portfolio_item"> <img
+                                <a href="love2.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Love4.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -178,11 +183,12 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 questions">
-                                <a href="poems/questions1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="questions1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Questions1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Quelques ‘bête’ questions</span> <em>Questions</em>
+                                            <div class="item_info"> <span>Quelques ‘bête’ questions</span>
+                                                <em>Questions</em>
                                             </div>
                                         </div>
                                     </div>
@@ -192,7 +198,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt3.html" target="_blank" class="portfolio_item"> <img
+                                <a href="hurt3.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Hurt3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -206,7 +212,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 catharsis">
-                                <a href="poems/catharsis1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="catharsis1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Catharsis1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -220,11 +226,12 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 life">
-                                <a href="poems/life2.html" target="_blank" class="portfolio_item"> <img
+                                <a href="life2.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Life2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Warmth, nostalgia and a torn piece of paper</span> <em>Life</em>
+                                            <div class="item_info"> <span>Warmth, nostalgia and a torn piece of
+                                                    paper</span> <em>Life</em>
                                             </div>
                                         </div>
                                     </div>
@@ -234,7 +241,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 life">
-                                <a href="poems/life1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="life1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Life1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
