--- a/poems/love1.html
+++ b/poems/love1.html
@@ -48,9 +48,10 @@
     <!-- ./header -->
 
     <!-- about -->
-    <div class="section" id="about">
+    <div class="section padd-bottom-0" id="about">
         <div class="container">
-            <div class="col-md-6" data-aos="fade-up">
+            <div class="flexbox">
+            <div class="col-md-6 about-para" data-aos="fade-up">
                 <h4>01</h4>
                 <h1 class="size-50">One more time <br /> </h1>
                 <div class="h-50"></div>
@@ -96,7 +97,7 @@
                         Just one. More. Time.
                     </p>
 
-                    <img src="../img/yours.png" alt="" />
+                    <img src="../img/yours.png" width="30%" alt="" style="float: right;" />
                 </article>
             </div>
             <div class="col-md-6 about-img-div">
@@ -104,6 +105,7 @@
                 <img src="../img/portfolio/Love3.jpg" width="400" class="img-responsive" alt="" align="right"
                     data-aos="fade-right" data-aos-delay="0" />
             </div>
+        </div>
         </div>
     </div>
     <!-- ./about -->
@@ -139,7 +141,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="hurt1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Hurt1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -152,7 +154,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 love">
-                                <a href="poems/love2.html" target="_blank" class="portfolio_item"> <img
+                                <a href="love2.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Love4.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -166,7 +168,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 questions">
-                                <a href="poems/questions1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="questions1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Questions1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -180,7 +182,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt2.html" traget="_blank" class="portfolio_item"> <img
+                                <a href="hurt2.html" traget="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Hurt2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -194,7 +196,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt3.html" target="_blank" class="portfolio_item"> <img
+                                <a href="hurt3.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Hurt3.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -208,7 +210,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 catharsis">
-                                <a href="poems/catharsis1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="catharsis1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Catharsis1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -222,7 +224,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 life">
-                                <a href="poems/life2.html" target="_blank" class="portfolio_item"> <img
+                                <a href="life2.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Life2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -236,7 +238,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 life">
-                                <a href="poems/life1.html" target="_blank" class="portfolio_item"> <img
+                                <a href="life1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Life1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
