--- a/index.html
+++ b/index.html
@@ -61,28 +61,30 @@
     <!-- ./home -->
 
     <!-- about -->
-    <div class="section" id="about">
+    <div class="section padd-bottom-0" id="about">
         <div class="container">
-            <div class="col-md-6" data-aos="fade-up">
-                <h4>01</h4>
-                <h1 class="size-50">Know <br /> About the conversations</h1>
-                <div class="h-50"></div>
-                <p>Welcome to the conversations. This is not just a poem diary but also a window into my life or out of yours.
-                    Conversations provide the escape from reality and talk about the things I wished to, with you. The conversations
-                    are not just for me, but maybe even for you. When you feel out of breath or need to just close your eyes and smile, 
-                    I would know. And I would be grateful to have had a chance to drive you down the memory (or the imaginary) lane. 
-                </p>
-                <p>Each poem has its own diction rule. It is something that I have appended in order to make it easier for you to feel the feeling 
-                    that I wanted to lock in those words. Each poem would have, at its end the magic reciepe, the interpretation of mine. You may wanna skip it 
-                    if you want to keep that poetry as yours, its anyway up for grabs. Much love, 
-                </p>
-                <div class="h-50"></div> <img src="img/Signature.png" alt="Signature" />
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-6 about-img-div">
-                <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/home3.jpg" width="400" class="img-responsive" alt="" align="right"
-                    data-aos="fade-right" data-aos-delay="0" />
+            <div class="flexbox">
+                <div class="col-md-6 about-para" data-aos="fade-up">
+                    <h4>01</h4>
+                    <h1 class="size-50">Know <br /> About the conversations</h1>
+                    <div class="h-50"></div>
+                    <p>Welcome to the conversations. This is not just a poem diary but also a window into my life or out of yours.
+                        Conversations provide the escape from reality and talk about the things I wished to, with you. The conversations
+                        are not just for me, but maybe even for you. When you feel out of breath or need to just close your eyes and smile, 
+                        I would know. And I would be grateful to have had a chance to drive you down the memory (or the imaginary) lane. 
+                    </p>
+                    <p>Each poem has its own diction rule. It is something that I have appended in order to make it easier for you to feel the feeling 
+                        that I wanted to lock in those words. Each poem would have, at its end the magic reciepe, the interpretation of mine. You may wanna skip it 
+                        if you want to keep that poetry as yours, its anyway up for grabs. Much love, 
+                    </p>
+                    <div class="h-50"></div> <img src="img/Signature.png" width="50%" alt="Signature" />
+                    <div class="h-50"></div>
+                </div>
+                <div class="col-md-6 about-img-div">
+                    <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
+                    <img src="img/home3.jpg" width="400" class="img-responsive" alt="" align="right"
+                        data-aos="fade-right" data-aos-delay="0" />
+                </div>
             </div>
         </div>
     </div>
@@ -346,38 +348,6 @@
     </div>
     <!-- ./contact -->
 
-    <!--DEMO01-->
-    <div id="animatedModal" class="popup-modal">
-        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
-        <div id="btn-close-modal" class="close-animatedModal close-popup-modal"> <i class="ion-close-round"></i> </div>
-        <div class="clearfix"></div>
-        <div class="modal-content">
-            <div class="container">
-                <div class="portfolio-padding">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2>Geschäfts Eines<br /> Web-Studios</h2>
-                        <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                            Enthusiastically create seamless synergy rather than excellent value. Quickly promote
-                            premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                            Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
-                        <br />
-                        <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                            Enthusiastically create seamless synergy rather than excellent value. Quickly promote
-                            premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                            Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!--  plugins  -->
