--- a/poems/questions1.html
+++ b/poems/questions1.html
@@ -212,6 +212,20 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 catharsis">
+                                <a href="poems/catharsis2.html" target="_blank" class="portfolio_item"> <img
+                                        src="img/portfolio/Catharsis2.jpg" alt="image" class="img-responsive" />
+                                    <div class="portfolio_item_hover">
+                                        <div class="portfolio-border clearfix">
+                                            <div class="item_info"> <span>Night of uncertainity</span> <em>Catharsis</em>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6 catharsis">
                                 <a href="catharsis1.html" target="_blank" class="portfolio_item"> <img
                                         src="../img/portfolio/Catharsis1.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
