Fixed orientation issue

--- a/poems/life1.html
+++ b/poems/life1.html
@@ -51,7 +51,7 @@
     <div class="section padd-bottom-0" id="about">
         <div class="container">
             <div class="flexbox">
-                <div class="col-md-6" data-aos="fade-up">
+                <div class="col-md-6 about-para" data-aos="fade-up">
                     <h4>01</h4>
                     <h1 class="size-50">Home<br /> </h1>
                     <div class="h-50"></div>
