--- a/poems/life2.html
+++ b/poems/life2.html
@@ -202,7 +202,7 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 catharsis">
                                 <a href="poems/catharsis2.html" target="_blank" class="portfolio_item"> <img
-                                        src="img/portfolio/Catharsis2.jpg" alt="image" class="img-responsive" />
+                                        src="../img/portfolio/Catharsis2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Night of uncertainity</span> <em>Catharsis</em>
