--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 hurt">
-                                <a href="poems/hurt2.html" traget="_blank" class="portfolio_item"> <img
+                                <a href="poems/hurt2.html" target="_blank" class="portfolio_item"> <img
                                         src="img/portfolio/Hurt2.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
