Changes on front page and link corrections

--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
                     <h4>01</h4>
                     <h1 class="size-50">Know <br /> About the conversations</h1>
                     <div class="h-50"></div>
-                    <p>Welcome to the conversations. This is not just a poem diary but also a window into my life or out of yours.
-                        Conversations provide the escape from reality and talk about the things I wished to, with you. The conversations
-                        are not just for me, but maybe even for you. When you feel out of breath or need to just close your eyes and smile, 
-                        I would know. And I would be grateful to have had a chance to drive you down the memory (or the imaginary) lane. 
+                    <p>Welcome to Conversations with you; without you. It is not just a poem diary but also a window into my life or out of yours. 
+                        These conversations provide an escape from reality or sometimes bring us closer to it. 
+                        The conversation entries are not just for me, but maybe even for you. When you feel out of breath or need to close your eyes and smile, I would know. 
+                        And I would be grateful to have had a chance to drive you down memory lane.
                     </p>
-                    <p>Each poem has its own diction rule. It is something that I have appended in order to make it easier for you to feel the feeling 
-                        that I wanted to lock in those words. Each poem would have, at its end the magic reciepe, the interpretation of mine. You may wanna skip it 
-                        if you want to keep that poetry as yours, its anyway up for grabs. Much love, 
+                    <p>Each poem has its own diction rule. It is something that I have appended to make it easier for you to feel the feeling that 
+                        I wanted to lock in those words. Each poem would have, at its end, the magic recipe, the interpretation of mine. 
+                        You may want to skip it if you like to keep that poetry as yours; it's any way up for grabs. 
                     </p>
+                    <p>Much love,</p>
                     <div class="h-50"></div> <img src="img/Signature.png" width="50%" alt="Signature" />
                     <div class="h-50"></div>
                 </div>
@@ -314,49 +315,25 @@
     <!-- ./projects -->
 
     <!-- contact -->
-    <div class="section" id="contact">
+    <div class="section" data-aos="fade-up" id="contact">
         <div class="container">
-            <div class="col-md-12">
-                <h4>03</h4>
-                <h1 class="size-50">Coffee?</h1>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up">
-
-                <h3>Phone Number</h3>
-                <p>+20 5555 569 42</p>
-                <h3> Mobile Numberr</h3>
-                <p>+20 5555 569 42</p>
-                <h3>Email</h3>
-                <p>mail@info.me </p>
-
-                <h3>Social Network</h3>
-
-                <ul class="social">
-                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                    <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-                    <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
-                </ul>
-                <div class="clearfix"></div>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-8" data-aos="fade-up">
-                <form class="contact-bg" id="contact-form" name="contact" method="post" novalidate="novalidate">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" />
-                    <input type="email" name="email" class="form-control" placeholder="Your E-mail" />
-                    <input type="text" name="phone" class="form-control" placeholder="Phone Number" />
-                    <textarea name="message" class="form-control" placeholder="Your Message"
-                        style="height:120px"></textarea>
-                    <button id="submit" type="submit" name="submit" class="btn btn-glance">Send</button>
-                    <div id="success">
-                        <p class="green textcenter"> Your message was sent successfully! I will be in touch as soon as I
-                            can. </p>
-                    </div>
-                    <div id="error">
-                        <p> Something went wrong, try refreshing and submitting the form again. </p>
-                    </div>
-                </form>
+            <div class="col-md-6">
+                <div data-aos="fade-up">
+                    <h4>03</h4>
+                    <h1 class="size-50">Coffee?</h1>
+                    <p class="footer-text">Well, as with any writer, I love coffee (no pun or stereotype intended, I like tea too).
+                        So, if you are in the city and have an interesting conversation, just grab a cup and ping me on the given two channels. 
+                        I would love to meet if time permits (or the cosmos, it depends). Cheers. 
+                    </p>
+                </div>
+                <div class="footer-flexbox">
+                    <ul class="social">
+                        <li><a href="mailto:dishant30899@gmail.com" target="_blank"><i class="ion-email"></i></a></li>
+                        <li><a href="https://in.linkedin.com/in/dishant-parikh" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                    </ul>
+                    
+                    <img src="img/signature-transparent.png" width="50%" alt="Signature" />
+                </div>
             </div>
         </div>
     </div>
